service/loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: awslb
spec:
  selector:
    app: myPod
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
