service/nodeport.yml
kind: Service
apiVersion: v1
metadata:
  name: nodeportsrv
spec:
  selector:
    server: web
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 31234
